err/prerender.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiofiles'...
Listing './lib/python3.5/site-packages/aiofiles/threadpool'...
Listing './lib/python3.5/site-packages/aiofiles-0.3.2.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/diskcache'...
Listing './lib/python3.5/site-packages/diskcache-3.0.1.dist-info'...
Listing './lib/python3.5/site-packages/failsafe'...
Listing './lib/python3.5/site-packages/httpagentparser'...
Listing './lib/python3.5/site-packages/httpagentparser-1.8.1.egg-info'...
Listing './lib/python3.5/site-packages/httptools'...
Listing './lib/python3.5/site-packages/httptools/parser'...
Listing './lib/python3.5/site-packages/httptools-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prerender'...
Compiling './lib/python3.5/site-packages/prerender/app.py'...
***   File "./lib/python3.5/site-packages/prerender/app.py", line 32
    HTML_FILTERS: Tuple[Callable[[str], str]] = (remove_script_tags, remove_meta_fragment_tag)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prerender/cache'...
Compiling './lib/python3.5/site-packages/prerender/cache/__init__.py'...
***   File "./lib/python3.5/site-packages/prerender/cache/__init__.py", line 8
    cache: CacheBackend = None
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prerender/cache/disk.py'...
***   File "./lib/python3.5/site-packages/prerender/cache/disk.py", line 13
    CACHE_ROOT_DIR: str = os.environ.get('CACHE_ROOT_DIR', '/tmp/prerender')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prerender/chromerdp.py'...
***   File "./lib/python3.5/site-packages/prerender/chromerdp.py", line 23
    PAGE_DONE_CHECK_TIMEOUT: int = int(os.getenv('PAGE_DONE_CHECK_TIMEOUT', 200))
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prerender/cli.py'...
***   File "./lib/python3.5/site-packages/prerender/cli.py", line 8
    DEBUG: bool = os.environ.get('DEBUG', 'false').lower() in ('true', 'yes', '1')
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prerender/prerender.py'...
***   File "./lib/python3.5/site-packages/prerender/prerender.py", line 14
    PRERENDER_TIMEOUT: int = int(os.environ.get('PRERENDER_TIMEOUT', 30))
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prerender-0.9.3.dist-info'...
Listing './lib/python3.5/site-packages/pyfailsafe-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/raven_aiohttp-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/sanic'...
Listing './lib/python3.5/site-packages/sanic-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/uvloop'...
Listing './lib/python3.5/site-packages/uvloop/handles'...
Listing './lib/python3.5/site-packages/uvloop/includes'...
Listing './lib/python3.5/site-packages/uvloop-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/extensions'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
